# openllm-prompt-mender

./: .gitignore  CONTRIBUTING.md  README.md  audio_assistant.json  pyproject.toml
data/: queries.jsonl  requirements.jsonl  trainset.jsonl
docs/: index.md  installation.md  usage.md
src/openllm_prompt_mender/: __init__.py  __main__.py  cli.py  openllm_prompt_mender.py  utils.py
src/openllm_prompt_mender/apps/: __init__.py  audio_assistant.py  audio_assistant_chainlit.py  search_assistant.py
src/openllm_prompt_mender/optimizers/: __init__.py  optimize_audio_assistant.py  optimize_search_assistant.py
src/openllm_prompt_mender/utils/: __init__.py  data_utils.py
tests/: __init__.py  test_openllm_prompt_mender.py
