[project]
name = "openllm-prompt-mender"
version = "0.1.0"
description = "A framework ultilized for prompt tuning."
readme = "README.md"
authors = [
  {name = "Loong Ma", email = "diqiuzhuanzhuan@gmail.com"}
]
maintainers = [
  {name = "Loong Ma", email = "diqiuzhuanzhuan@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "chainlit>=2.9.6",
  "datasets>=4.4.2",
  "dotenv>=0.9.9",
  "dspy>=3.0.4",
  "google-cse>=0.1.2",
  "gradio>=6.3.0",
  "typer",
]
requires-python = ">= 3.12"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/diqiuzhuanzhuan/openllm-prompt-mender/issues"
changelog = "https://github.com/diqiuzhuanzhuan/openllm-prompt-mender/blob/master/changelog.md"
homepage = "https://github.com/diqiuzhuanzhuan/openllm-prompt-mender"

[project.scripts]
openllm-prompt-mender = "openllm_prompt_mender.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
